# voidfetch

./: .gitignore  Cargo.toml  LICENSE  README.md  install.ps1  install.sh  voidfetch  voidfetch.cmd  voidfetch.py
examples/: 01-arctic-frost.css  02-sunset-fire.css  03-neon-cyberpunk.css  04-dracula.css  05-tokyo-night.css  06-gruvbox-dark.css  07-catppuccin-mocha.css  08-monokai-pro.css  09-nord.css  10-one-dark.css  11-rose-pine.css  12-solarized-dark.css  13-github-dark.css  14-palenight.css  15-midnight-ocean.css  16-forest.css  17-cherry-blossom.css  18-blood-moon.css  19-lavender-dreams.css  20-amber-glow.css  21-emerald-sea.css  22-void-purple.css  23-ice-blue-minimal.css  24-matrix-green.css  25-pastel-dream.css  26-crimson-tide.css  27-golden-hour.css  28-arctic-blue.css  29-vaporwave.css  30-solarized-light.css  31-monochrome.css  32-retro-terminal.css  33-sakura-pink.css  34-cyber-synth.css  35-earth-tone.css  36-space-gray.css  37-royal-purple.css  38-neon-pink.css  39-abyssal-deep.css  40-solar-flare.css  (+21 more)
src/: ansi.rs  config.rs  info.rs  logo.rs  main.rs
