[package]
name = "voidfetch"
version = "2.0.0"
edition = "2021"
description = "minimal system info"
authors = ["AstralZX"]
license = "AGPL-3.0"
repository = "https://github.com/AstralZX/voidfetch"

[dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
